--- a/web/bundles/muzichcore/css/main.css
+++ b/web/bundles/muzichcore/css/main.css
@@ -1308,6 +1308,12 @@ span#add_url_title
   font-size: 15px;
 }
 
+a#autoplay_launch
+{
+  float: right;
+  margin-top: -25px;
+}
+
 div#autoplay.popin_block
 {
   width: 500px;
@@ -1341,6 +1347,6 @@ a#autoplay_close
 {
   float: right;
   text-decoration: none;
-  margin-top: -27px;
-  margin-right: -27px;
+  margin-top: -32px;
+  margin-right: -32px;
 }
