Evolution #196: Liste de lecture
Mise ne place liste de lecture sur page show

--- a/src/Muzich/HomeBundle/Resources/views/Show/showGroup.html.twig
+++ b/src/Muzich/HomeBundle/Resources/views/Show/showGroup.html.twig
@@ -54,6 +54,15 @@
     'object_type' : 'group'
   } %}
   
+  <a href="{{ path('elements_get_filter_data_autoplay_show', {
+        'show_type'  : 'group',
+        'show_id'    : group.id, 
+        'data'       : tags_id_json
+      }) }}" class="button" id="autoplay_launch" 
+     title="{{ 'elements.autoplay.launch'|trans({}, 'elements') }}" >
+    <img src="{{ asset('/bundles/muzichcore/img/1353494305_player_play.png') }}" alt="" />
+  </a>
+  
   {% if his_group or group.open %}
   
     <div id="element_add_box" style="display: none;">
@@ -91,6 +100,11 @@
         'type'          : 'group',
         'object_id'     : group.id, 
         'tags_ids_json' : ''
+      }) }}" />
+     <input type="hidden" id="autoplay_url" value="{{ path('elements_get_filter_data_autoplay_show', {
+        'show_type'          : 'group',
+        'show_id'            : group.id, 
+        'data' : ''
       }) }}" />
      <a href="{{ path('show_elements_get', {
         'type'          : 'group',
