Evolution #196: Liste de lecture
Gestion optimisé des tags sur page show. Avant ce commit était exclue les
elements sans tag de l'autoplay, ainsi que du "plus d'élément"

--- a/src/Muzich/HomeBundle/Resources/views/Show/showGroup.html.twig
+++ b/src/Muzich/HomeBundle/Resources/views/Show/showGroup.html.twig
@@ -57,7 +57,7 @@
   <a href="{{ path('elements_get_filter_data_autoplay_show', {
         'show_type'  : 'group',
         'show_id'    : group.id, 
-        'data'       : tags_id_json
+        'data'       : '[]'
       }) }}" class="button" id="autoplay_launch" 
      title="{{ 'elements.autoplay.launch'|trans({}, 'elements') }}" >
     <img src="{{ asset('/bundles/muzichcore/img/1353494305_player_play.png') }}" alt="" />
@@ -109,7 +109,7 @@
      <a href="{{ path('show_elements_get', {
         'type'          : 'group',
         'object_id'     : group.id, 
-        'tags_ids_json' : tags_id_json
+        'tags_ids_json' : '[]'
       }) }}" class="elements_more button" >
        {{ 'more'|trans({}, 'userui') }}
      </a>
