--- a/src/Muzich/HomeBundle/Resources/views/Show/showUser.html.twig
+++ b/src/Muzich/HomeBundle/Resources/views/Show/showUser.html.twig
@@ -88,7 +88,7 @@
   <a href="{{ path('elements_get_filter_data_autoplay_show', {
         'show_type'  : 'user',
         'show_id'    : viewed_user.id, 
-        'data'       : tags_id_json
+        'data'       : '[]'
       }) }}" class="button" id="autoplay_launch" 
      title="{{ 'elements.autoplay.launch'|trans({}, 'elements') }}" >
     <img src="{{ asset('/bundles/muzichcore/img/1353494305_player_play.png') }}" alt="" />
@@ -116,7 +116,7 @@
      <a href="{{ path('show_elements_get', {
         'type'          : 'user',
         'object_id'     : viewed_user.id, 
-        'tags_ids_json' : tags_id_json
+        'tags_ids_json' : '[]'
       }) }}" class="elements_more button" >
        {{ 'more'|trans({}, 'userui') }}
      </a>
