--- a/src/Muzich/FavoriteBundle/Resources/views/Favorite/userList.html.twig
+++ b/src/Muzich/FavoriteBundle/Resources/views/Favorite/userList.html.twig
@@ -19,6 +19,16 @@
   {% include "MuzichCoreBundle:Tag:tagsList.favorite.html.twig" with {
     'user_id' : viewed_user.id
   } %}
+  
+  <a href="{{ path('elements_get_filter_data_autoplay_favorite', {
+        'show_type'  : 'user',
+        'show_id'    : viewed_user.id, 
+        'data'       : '[]'
+      }) }}" class="button" id="autoplay_launch" 
+     title="{{ 'elements.autoplay.launch'|trans({}, 'elements') }}" >
+    <img src="{{ asset('/bundles/muzichcore/img/1353494305_player_play.png') }}" alt="" />
+  </a>
+  
 
   {% include "MuzichCoreBundle:SearchElement:default.html.twig" %}
     
@@ -29,10 +39,16 @@
   {% if elements|length %}
      <span class="elements_more">
        <input type="hidden" id="more_elements_url" value="{{ path('favorite_get', {'user_id': viewed_user.id, 'tags_ids_json' : ''}) }}" />
-       <a href="{{ path('favorite_get', {'user_id': viewed_user.id, 'tags_ids_json' : tags_id_json}) }}" class="elements_more button">
+       <a href="{{ path('favorite_get', {'user_id': viewed_user.id, 'tags_ids_json' : '[]'}) }}" class="elements_more button">
          {{ 'more'|trans({}, 'userui') }}
        </a>
      </span>
   {% endif %}
+  
+  <input type="hidden" id="autoplay_url" value="{{ path('elements_get_filter_data_autoplay_favorite', {
+    'show_type'  : 'user',
+    'show_id'    : viewed_user.id, 
+    'data' : ''
+  }) }}" />
     
 {% endblock %}
