Anomalie #450: Hardclick autoplay
L'erreur était du a la non prise en compte de l'aspect asyncrone de javascript.
Le code a été mis a jour en conséquence.

--- a/src/Muzich/CoreBundle/Resources/views/layout.html.twig
+++ b/src/Muzich/CoreBundle/Resources/views/layout.html.twig
@@ -97,6 +97,7 @@
         <img src="{{ asset('/bundles/muzichcore/img/1353505874_button_next.png') }}" alt="next" />
       </a>
       
+    <img id="autoplay_element_loader" src="{{ asset('/bundles/muzichcore/img/ajax-loader.gif') }}" alt="loader" />
     <ul id="autoplay_element"><li class="element" id="autoplay_element_container"></li></ul>
     <div id="autoplay_player_container">
       <div id="autoplay_player"></div>
