--- a/src/Muzich/CoreBundle/Resources/views/layout.html.twig
+++ b/src/Muzich/CoreBundle/Resources/views/layout.html.twig
@@ -134,7 +134,7 @@
     
   {% for key, flash in app.session.getFlashes() %}
     <div class="{{ key }} message">
-      <a class="message-close" href="#" title="fermer"><img alt="close" src="{{ asset('bundles/muzichcore/img/1317386146_cancel.png') }}" /></a>
+      <a class="message-close" href="javascript:void(0);" title="fermer"><img alt="close" src="{{ asset('bundles/muzichcore/img/1317386146_cancel.png') }}" /></a>
       <h3>{{ flash|trans({}, 'flash') }}</h3>
     </div>
   
