--- a/src/Muzich/CoreBundle/Resources/views/layout.html.twig
+++ b/src/Muzich/CoreBundle/Resources/views/layout.html.twig
@@ -86,15 +86,12 @@
 <body>
   
   <div id="autoplay" class="popin_block" style="display: none;">
-    <a href="javascript:void(0);" id="autoplay_close" >
-      <img src="{{ asset('/bundles/muzichcore/img/1353498913_window-close.png') }}" alt="close" />
-    </a>
       
       <a href="javascript:void(0);" id="autoplay_previous">
-        <img src="{{ asset('/bundles/muzichcore/img/1353505865_button_previous.png') }}" alt="previous" />
+        <img src="{{ asset('/bundles/muzichcore/img/autoplay_previous.png') }}" alt="previous" />
       </a>
       <a href="javascript:void(0);" id="autoplay_next">
-        <img src="{{ asset('/bundles/muzichcore/img/1353505874_button_next.png') }}" alt="next" />
+        <img src="{{ asset('/bundles/muzichcore/img/autoplay_next.png') }}" alt="next" />
       </a>
       
     <img id="autoplay_element_loader" src="{{ asset('/bundles/muzichcore/img/ajax-loader.gif') }}" alt="loader" />
@@ -105,6 +102,13 @@
     <div id="autoplay_player_soundcloud"></div>
     <img id="autoplay_loader" src="{{ asset('/bundles/muzichcore/img/ajax-loader.gif') }}" alt="loader" />
     <p id="autoplay_noelements_text" style="display: none;">{{ 'elements.autoplay.noelements.text'|trans({}, 'elements') }}</p>
+    
+    <a href="javascript:void(0);" id="autoplay_close" >
+      <img src="{{ asset('/bundles/muzichcore/img/1317386146_cancel.png') }}" alt="close" />
+    </a>
+    
+    <p><span class="sinfo">{{ 'autoplay.limitations_players'|trans({}, 'userui') }}</span></p>
+    
   </div>
     
   {% include "MuzichCoreBundle:Language:languages.html.twig" %}
