--- a/src/Muzich/CoreBundle/Resources/views/layout.html.twig
+++ b/src/Muzich/CoreBundle/Resources/views/layout.html.twig
@@ -3,9 +3,8 @@
 	"http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="fr" lang="fr">
 <head>
-	<title>Muzi.ch - {% block title %}{% endblock %}</title>
-	
-	<meta http-equiv="content-type" content="text/html;charset=utf-8" />
+  <title>Muzi.ch - {% block title %}{% endblock %}</title>
+  <meta http-equiv="content-type" content="text/html;charset=utf-8" />
 	<meta http-equiv="Content-Style-Type" content="text/css" />
 	<meta name="description" content="" />
 	<meta name="keywords" content="" />
@@ -22,14 +21,19 @@
 	<script src="{{ asset('js/jquery-1.8.2.prod.js') }}" type="text/javascript"></script>
   {% endif %}
   <script src="{{ asset('js/jquery-ui-1.8.7.min.js') }}" type="text/javascript"></script>
-	<script src="{{ asset('bundles/muzichcore/js/muzich.js') }}" type="text/javascript"></script>
+  <script src="{{ asset('bundles/muzichcore/js/muzich.js') }}" type="text/javascript"></script>
 	
   <script type="text/javascript" src="{{ asset('js/swfobject.js') }}"></script> 
-  
-       <script src="http://connect.soundcloud.com/sdk.js"></script>
-       <script src="http://w.soundcloud.com/player/api.js"></script>
+  {# TODO: On peux piquer les js ?  #}
+  <script src="http://connect.soundcloud.com/sdk.js"></script>
+  <script src="http://w.soundcloud.com/player/api.js"></script>
        
   <script src="{{ asset('bundles/muzichcore/js/autoplay.js') }}" type="text/javascript"></script>
+  
+  {# jPlayer #}
+  <link href="{{ asset('jplayer/skin/blue.monday/jplayer.blue.monday.css') }}" rel="stylesheet" type="text/css" />
+  <script type="text/javascript" src="{{ asset('jplayer/js/jquery.jplayer.min.js') }}"></script>
+  <script type="text/javascript" src="{{ asset('jplayer/js/jplayer.playlist.min.js') }}"></script>
   
   <script src="{{ asset('js/tags/jquery.autoGrowInput.js') }}" type="text/javascript"></script>
   <script src="{{ asset('js/tags/jquery.tagBox.js') }}" type="text/javascript"></script>
@@ -77,6 +81,7 @@
     url_datas_api = "{{ path('element_retrieve_api_datas') }}";
     url_element_add = "{{ path('element_add') }}";
     url_element_dom_get_one_autoplay = "{{ path('element_dom_get_one', {'type':'autoplay'}) }}";
+    url_element_get_stream_data = "{{ path('element_get_stream_data') }}";
     
     url_img_ajax_loader = "{{ asset('/bundles/muzichcore/img/ajax-loader.gif') }}";
   </script>
@@ -90,6 +95,11 @@
       <a href="javascript:void(0);" id="autoplay_previous">
         <img src="{{ asset('/bundles/muzichcore/img/autoplay_previous.png') }}" alt="previous" />
       </a>
+      
+	<a href="javascript:void(0);" id="autoplay_close" >
+	  <img src="{{ asset('/bundles/muzichcore/img/1317386146_cancel.png') }}" alt="close" />
+	</a>
+      
       <a href="javascript:void(0);" id="autoplay_next">
         <img src="{{ asset('/bundles/muzichcore/img/autoplay_next.png') }}" alt="next" />
       </a>
@@ -100,13 +110,55 @@
       <div id="autoplay_player"></div>
     </div>
     <div id="autoplay_player_soundcloud"></div>
+    <div id="autoplay_player_generic" style="display: none;">
+      <div id="jquery_jplayer_1" class="jp-jplayer"></div>
+      <div id="jp_container_1" class="jp-audio">
+        <div class="jp-type-playlist">
+          <div class="jp-gui jp-interface">
+            <ul class="jp-controls">
+              <li><a href="javascript:;" class="jp-previous" tabindex="1">previous</a></li>
+              <li><a href="javascript:;" class="jp-play" tabindex="1">play</a></li>
+              <li><a href="javascript:;" class="jp-pause" tabindex="1">pause</a></li>
+              <li><a href="javascript:;" class="jp-next" tabindex="1">next</a></li>
+              <li><a href="javascript:;" class="jp-stop" tabindex="1">stop</a></li>
+              <li><a href="javascript:;" class="jp-mute" tabindex="1" title="mute">mute</a></li>
+              <li><a href="javascript:;" class="jp-unmute" tabindex="1" title="unmute">unmute</a></li>
+              <li><a href="javascript:;" class="jp-volume-max" tabindex="1" title="max volume">max volume</a></li>
+            </ul>
+            <div class="jp-progress">
+              <div class="jp-seek-bar">
+                <div class="jp-play-bar"></div>
+              </div>
+            </div>
+            <div class="jp-volume-bar">
+              <div class="jp-volume-bar-value"></div>
+            </div>
+            <div class="jp-time-holder">
+              <div class="jp-current-time"></div>
+              <div class="jp-duration"></div>
+            </div>
+            <ul class="jp-toggles" style="display: none;">
+              <li><a href="javascript:;" class="jp-shuffle" tabindex="1" title="shuffle">shuffle</a></li>
+              <li><a href="javascript:;" class="jp-shuffle-off" tabindex="1" title="shuffle off">shuffle off</a></li>
+              <li><a href="javascript:;" class="jp-repeat" tabindex="1" title="repeat">repeat</a></li>
+              <li><a href="javascript:;" class="jp-repeat-off" tabindex="1" title="repeat off">repeat off</a></li>
+            </ul>
+          </div>
+          <div class="jp-playlist">
+            <ul>
+              <li></li>
+            </ul>
+          </div>
+          <div class="jp-no-solution">
+            <span>Update Required</span>
+            To play the media you will need to either update your browser to a recent version or update your <a href="http://get.adobe.com/flashplayer/" target="_blank">Flash plugin</a>.
+          </div>
+        </div>
+      </div>
+    </div>
     <img id="autoplay_loader" src="{{ asset('/bundles/muzichcore/img/ajax-loader.gif') }}" alt="loader" />
     <p id="autoplay_noelements_text" style="display: none;">{{ 'elements.autoplay.noelements.text'|trans({}, 'elements') }}</p>
-    
-    <a href="javascript:void(0);" id="autoplay_close" >
-      <img src="{{ asset('/bundles/muzichcore/img/1317386146_cancel.png') }}" alt="close" />
-    </a>
-    
+        
     <p><span class="sinfo">{{ 'autoplay.limitations_players'|trans({}, 'userui') }}</span></p>
     
   </div>
