--- a/web/bundles/muzichcore/css/main.css
+++ b/web/bundles/muzichcore/css/main.css
@@ -90,6 +90,11 @@ input.button, button.button {
   color: #00d0de;
 }
 
+#autoplay div.jp-audio a
+{
+  color: black;
+}
+
 #container a.button, #autoplay a.button
 {
   color: white;
@@ -1344,25 +1349,26 @@ a#autoplay_next
 a#autoplay_previous, a#autoplay_next, a#autoplay_close
 {
   background: #fff;
-	padding: 5px;
-	border: 10px solid #ddd;
-	z-index: 99999;
-	/*--Les différentes définitions de Box Shadow en CSS3--*/
-	-webkit-box-shadow: 0px 0px 20px #000;
-	-moz-box-shadow: 0px 0px 20px #000;
-	box-shadow: 0px 0px 20px #000;
-	/*--Coins arrondis en CSS3--*/
-	-webkit-border-radius: 10px;
-	-moz-border-radius: 10px;
-	border-radius: 10px;
+  padding: 5px;
+  border: 10px solid #ddd;
+  z-index: 99999;
+  /*--Les différentes définitions de Box Shadow en CSS3--*/
+  -webkit-box-shadow: 0px 0px 20px #000;
+  -moz-box-shadow: 0px 0px 20px #000;
+  box-shadow: 0px 0px 20px #000;
+  /*--Coins arrondis en CSS3--*/
+  -webkit-border-radius: 10px;
+  -moz-border-radius: 10px;
+  border-radius: 10px;
 }
 
 a#autoplay_close
 {
   float: left;
   text-decoration: none;
-  margin-top: -100px;
-  margin-left: -120px;
+  margin-top: 130px;
+  margin-left: -110px;
+  z-index: 99;
 }
 
 div#autoplay_title
