--- a/src/Muzich/CoreBundle/Resources/views/layout.html.twig
+++ b/src/Muzich/CoreBundle/Resources/views/layout.html.twig
@@ -22,6 +22,7 @@
   {% endif %}
   <script src="{{ asset('js/jquery-ui-1.8.7.min.js') }}" type="text/javascript"></script>
   <script src="{{ asset('bundles/muzichcore/js/muzich.js') }}" type="text/javascript"></script>
+  <script src="{{ asset('js/lib/TagPrompt.js') }}" type="text/javascript"></script>
 	
   <script type="text/javascript" src="{{ asset('js/swfobject.js') }}"></script> 
   {# TODO: On peux piquer les js ?  #}
